--- a/SpringBoot/src/main/resources/templates/index.html
+++ b/SpringBoot/src/main/resources/templates/index.html
@@ -1,13 +1,57 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta content="text/html" charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <link th:href="@{bootstrap-4.0.0/css/bootstrap.min.css}" rel="stylesheet"/>
-    <title>Index</title>
+    <title sec:authentication="name"></title><!--获取当前用户用户名-->
+    <style type="text/css">
+        body {
+            padding-top: 50px;
+        }
+        .starter-template {
+            padding :40px 15px;
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
-    <div class="panel panel-primary">
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Spring Security</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/}">首页</a> </li>
+            </ul>
+        </div>
+    </div>
+    </nav>
+
+    <div class="container">
+        <div class="starter-template">
+            <h1 th:text="${msg.title}"></h1>
+            <p class="bg-primary" th:text="${msg.content}"></p>
+            <div sec:authorize="hasRole('ROLE_ADMIN')">
+                <p class="bg-info" th:text="${msg.etraInfo}"></p>
+            </div>
+
+            <div sec:authorize="hasRole('ROLE_USER')">
+                <p class="bg-info">无更多信息显示</p>
+            </div>
+
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" class="btn btn-primary" value="注销"/>
+            </form>
+        </div>
+    </div>
+
+
+
+<!--    <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">访问model</h3>
         </div>
@@ -30,7 +74,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div>-->
 
     </div>
     <script th:src="@{jquery-3.3.1.js}" type="text/javascript"></script>
