--- a/SpringBoot/src/main/resources/templates/index.html
+++ b/SpringBoot/src/main/resources/templates/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
@@ -35,11 +36,11 @@
         <div class="starter-template">
             <h1 th:text="${msg.title}"></h1>
             <p class="bg-primary" th:text="${msg.content}"></p>
-            <div sec:authorize="hasRole('ROLE_ADMIN')">
+            <div sec:authorize="hasRole('ADMIN')">
                 <p class="bg-info" th:text="${msg.etraInfo}"></p>
             </div>
 
-            <div sec:authorize="hasRole('ROLE_USER')">
+            <div sec:authorize="hasRole('USER')">
                 <p class="bg-info">无更多信息显示</p>
             </div>
 
@@ -51,7 +52,7 @@
 
 
 
-<!--    <div class="panel panel-primary">
+    <div class="panel panel-primary">
         <div class="panel-heading">
             <h3 class="panel-title">访问model</h3>
         </div>
@@ -74,7 +75,7 @@
                     </li>
                 </ul>
             </div>
-        </div>-->
+        </div>
 
     </div>
     <script th:src="@{jquery-3.3.1.js}" type="text/javascript"></script>
