--- a/SpringBoot/src/main/resources/templates/login.html
+++ b/SpringBoot/src/main/resources/templates/login.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>登陆页面</title>
-    <link rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>
+    <meta content="text/html" charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link th:href="@{bootstrap-4.0.0/css/bootstrap.min.css}" rel="stylesheet"/>
     <style type="text/css">
         body {
-            padding-top:50px;
+            padding-top: 50px;
         }
         .starter-template {
-            padding:40px 15px;
-            text-align: center;
+            padding :40px 15px;
+            text-align:center;
         }
     </style>
 </head>
 <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Spring Security</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a th:href="@{/}">首页</a> </li>
-                </ul>
-            </div>
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Spring Security</a>
         </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/}">首页</a> </li>
+            </ul>
+        </div>
+    </div>
     </nav>
+
     <div class="container">
         <div class="starter-template">
-            <p th:if="${param.logout}" class="bg-warning">已成功注销</p>
-            <p th:if="${param.error}" class="bg-danger">有错误 请重试</p>
-            <h2>使用帐号密码登陆</h2>
+            <p th:if="${param.logout}" class="bg-warning">Logout Success</p>
+            <p th:if="${param.error}" class="bg-danger">Error</p>
+            <h2>Use Username and Password to Login</h2>
             <form name="form" th:action="@{/login}" action="/login" method="POST">
                 <div class="form-group">
-                    <label for="username">帐号</label>
-                    <input type="text" class="form-control" id="username" name="username" value="" placeholder="帐号"/>
+                    <label for="username">username</label>
+                    <input type="text" class="form-control" id="username" name="username" value="" placeholder="username"/>
                 </div>
                 <div class="form-group">
-                    <label for="password">密码</label>
-                    <input type="password" class="form-group" id="password" name="password" placeholder="密码"/>
+                    <label for="password">password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="password"/>
                 </div>
-                <input type="submit" id="login" value="Login" class="btn btn-primary">
+                <input type="submit" id="login" value="Login" class="btn btn-primary"/>
             </form>
         </div>
     </div>
