--- a/SpringBoot/src/main/resources/templates/chat.html
+++ b/SpringBoot/src/main/resources/templates/chat.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <script th:src="@{sockjs.min.js}"></script>
-    <script th:src="@{stomp.min.js}"></script>
-    <script th:src="@{jquery-3.3.1.js}"></script>
+    <script src="https://cdn.bootcss.com/sockjs-client/1.3.0/sockjs.min.js"></script>
+    <script src="https://cdn.bootcss.com/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <p>聊天室</p>
