--- a/SpringBoot/src/main/resources/templates/index.html
+++ b/SpringBoot/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta content="text/html" charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link th:href="@{bootstrap-4.0.0/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <title sec:authentication="name"></title><!--获取当前用户用户名-->
     <style type="text/css">
         body {
@@ -78,8 +78,8 @@
         </div>
 
     </div>
-    <script th:src="@{jquery-3.3.1.js}" type="text/javascript"></script>
-    <script th:src="@{bootstrap-4.0.0/js/bootstrap.js}"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script th:inline="javascript">
         var single = [[${singlePerson}]];
         console.log(single.name+"/"+single.age)
