--- a/SpringBoot/src/main/resources/templates/login.html
+++ b/SpringBoot/src/main/resources/templates/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta content="text/html" charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link th:href="@{bootstrap-4.0.0/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 50px;
