--- a/SpringBoot/src/main/resources/templates/ws.html
+++ b/SpringBoot/src/main/resources/templates/ws.html
@@ -17,9 +17,9 @@
             <p id="response"></p>
         </div>
     </div>
-    <script th:src="@{sockjs.min.js}"></script>
-    <script th:src="@{stomp.min.js}"></script>
-    <script th:src="@{jquery-3.3.1.js}"></script>
+    <script src="https://cdn.bootcss.com/sockjs-client/1.3.0/sockjs.min.js"></script>
+    <script src="https://cdn.bootcss.com/stomp.js/2.3.3/stomp.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
         var stompClient = null;
 
